# switchgpt

./: .gitignore  README.md  pyproject.toml
docs/: development.md  prd.md
docs/manual-tests/: 2026-04-16-phase-1-local-foundation.md  2026-04-16-phase-2-manual-session-switching.md  2026-04-17-phase-3-automatic-limit-response.md  2026-04-19-authentication-403-and-switch-fix.md
docs/superpowers/plans/: 2026-04-16-switchgpt-phase-1-local-foundation.md  2026-04-16-switchgpt-phase-2-manual-session-switching.md  2026-04-17-switchgpt-phase-3-automatic-limit-response.md  2026-04-17-switchgpt-phase-4-operational-hardening.md  2026-04-18-switchgpt-phase-5-packaging-and-maintainability.md  2026-04-19-switchgpt-codex-auth-file-sync-upgrade.md  2026-04-19-switchgpt-codex-auth-sync.md  2026-04-21-switchgpt-codex-auth-json-import.md  2026-04-22-codex-only-switch.md
docs/superpowers/specs/: 2026-04-16-switchgpt-phase-0-feasibility-design.md  (+8 more)
switchgpt/: __init__.py  account_store.py  bootstrap.py  cli.py  codex_auth_sync.py  config.py  diagnostics.py  doctor_service.py  errors.py  managed_browser.py  models.py  output.py  playwright_client.py  registration.py  secret_store.py  status_service.py  switch_history.py  switch_service.py  watch_service.py
tests/: conftest.py  test_account_store.py  test_cli.py  test_codex_auth_sync.py  test_config.py  test_diagnostics.py  test_doctor_service.py  test_managed_browser.py  test_project_dependencies.py  test_registration.py  test_secret_store.py  test_status_service.py  test_switch_history.py  test_switch_service.py  test_watch_service.py
